k8s/db-notes-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notes-app
    name: db-notes-app
  name: db-notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
      name: db-notes-app
  strategy: {}
  template:
    metadata:
      labels:
        app: notes-app
        name: db-notes-app
    spec:
      containers:
        - image: mongo:5.0.2
          name: db-notes-app
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: db-notes-app-volume
      volumes:
        - name: db-notes-app-volume
          persistentVolumeClaim:
            claimName: db-notes-app-pvc
status: {}
