k8s/frontend-notes-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notes-app
    name: frontend-notes-app
  name: frontend-notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app
      name: frontend-notes-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: notes-app
        name: frontend-notes-app
    spec:
      containers:
        - image: vrlins001/frontend-notes-app:latest
          name: frontend-notes-app
          resources: {}
          ports:
            - containerPort: 80
