k8s/backend-notes-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-notes-app
  name: backend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend-notes-app
