k8s/db-notes-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notes-app
    name: db
  name: db
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: notes-app
    name: db-notes-app
