k8s/frontend-notes-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notes-app
    name: frontend
  name: frontend
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: notes-app
    name: frontend-notes-app
