k8s/notes-app.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notes-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend
              servicePort: 80
          - path: /api/?(.*)
            backend:
              serviceName: backend
              servicePort: 8080
